add jvm mark